--- a/i18n/lang-ua.json
+++ b/i18n/lang-ua.json
@@ -1,7 +1,28 @@
 {
 	"tittle": "Мій сайт",
+	"logo": "KOLPOL",
+	"manu1": "Тиражування",
+	"manu2": "Паліурні роботи",
+	"manu3": "Ламінація<br>фольгування<br> тиснення<br> під золото",
+	"menuList1": {
+		"li1": "книги",
+		"li2": "журнали",
+		"li3": "бланки",
+		"li4": "картки",
+		"li5": "методички"
+	},
+	"menuList2": {
+		"li1": "особові справи",
+		"li2": "папки під книги, журнали",
+		"li3": "архівні папки",
+		"li4": "архівні коробки",
+		"li5": "дипломи",
+		"li6": "посвідчення"
+	},
 	"btnUA": "UA",
 	"btnRU": "RU",
+	"text1": "Від коробки<br> до методички",
+	"text2": "Ми робимо все!",
 	"sectionTittle1": "Палітурні роботи",
 	"sectionTittle2": "Тиражування",
 	"sectionTittle3": "Ламінація, фальгування, тиснення під золото",
