update frontpage style

--- a/i18n/lang-ua.json
+++ b/i18n/lang-ua.json
@@ -2,7 +2,7 @@
 	"tittle": "Мій сайт",
 	"logo": "KOLPOL",
 	"manu1": "Тиражування",
-	"manu2": "Паліурні роботи",
+	"manu2": "Палітурні роботи",
 	"manu3": "Ламінація<br>фольгування<br> тиснення<br> під золото",
 	"menuList1": {
 		"li1": "книги",
